# FileHandler

./: CMakeLists.txt  README.md
include/FileHandler/: FileHandler.h
src/: CMakeLists.txt  FileHandler.cpp
